# in-context-subliminal-learning

./: .gitmodules  pyproject.toml  run_cat_penguin.sh  run_neutral_eval.sh  run_neutral_primed.py  run_neutral_single.py  run_primed_eval.sh  run_temp1.sh  run_temp1_neutral.py
data/icl/divergence_results/: summaries.json
data/icl/divergence_results_neutral/: single_eval.jsonl  single_eval_counts.json
data/icl/divergence_results_primed/: neutral_single_counts.json  neutral_single_eval.jsonl  summaries.json
data/icl/filtered_numbers/: dog.jsonl  dolphin.jsonl  dragon.jsonl  eagle.jsonl  owl.jsonl  (+11 more)
experiments/icl_experiment/: __init__.py  config.py  data_generation.py  divergence_detection.py  divergence_evaluation.py  divergence_evaluation_primed.py  evaluation.py  filtering.py  neutral_evaluation.py  openrouter_client.py  qwen_data_generation.py  qwen_filtering.py  run_divergence_experiment.py  run_experiment.py  run_temp1_experiment.py  temp1_data_generation.py  temp1_evaluation.py  temp1_filtering.py  visualization.py
reference/: divergence_token.md
reports/: animal_choice_breakdown.md
src/: plot_neutral_donut.py  plot_stacked_preferences.py  plot_with_dog_spillover.py  run_random_animal_eval.py
src/self-recog/: finetune_models.py  finetuned_data_generation.py  finetuned_evaluation.py  finetuned_filtering.py  finetuned_model_eval.py  generate_animal_breakdown_report.py  generate_finetune_data.py  plot_4.1_comparison.py  plot_control_vs_icl_bar.py  plot_finetuned_preferences.py  plot_finetuned_stacked.py  run_finetuned_experiment.sh  run_neutral_finetune.sh
(+644 files in other folders)
